<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".dialog.EnquiryDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/ivClose"
                android:text="EDIT PROFILE"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"  />

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_24"
                android:padding="5dp"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/editFName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="First Name"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/editLName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Last Name"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/black"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        <RadioGroup
            android:id="@+id/rgGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginLeft="30dp" />

        </RadioGroup>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="CLOSE"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:background="@drawable/btn_shape"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/submit"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-black"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:background="@drawable/btn_shape"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>